--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "portfolio-app",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "http://bordanattila.github.io/",
+  "private": false,
+  "homepage": "https://bordanattila.github.io/Portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
