--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.1",
     "bootstrap": "^5.3.1",
+    "framer-motion": "^12.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-reveal": "^1.2.2",
+    "react-intersection-observer": "^9.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
